--- a/slackbackup/templates/channels.html
+++ b/slackbackup/templates/channels.html
@@ -28,4 +28,17 @@
             {% endif %}
         {% endfor %}
     </table>
+
+    <h4>Archived Private Groups</h4>
+    <table class="table table-striped">
+        {% for channel in groups %}
+        {% if channel.is_archived %}
+        <tr>
+            <td><a href="/channels/{{ channel.id }}/">
+                {{ channel.name }}</a>
+            </td>
+        </tr>
+        {% endif %}
+        {% endfor %}
+    </table>
 {% endblock %}
